ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: aksdpm.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demodpm
          servicePort: 80
